--- a/Readme
+++ b/Readme
@@ -2,4 +2,6 @@ Views.py calls the function insert() and search() present in dbUtils.py
 dbUtils is the main file which helps in inserting new tags and searching tags.
 models contains Table required.
 
-Views act as the controller...
+Views act as the controller...which controls every  things 
+
+
